# backend/api/src/app/Services/Auth/JwtService.php
@@ -2,7 +2,6 @@
 
 namespace App\Services\Auth;
 
-use App\Http\Resources\Auth\SuccessAuthResource;
 use App\Http\Resources\Auth\SuccessLoginResource;
 use App\Http\Resources\Auth\SuccessRegisterResource;
 use App\Http\Resources\BaseWithResponseResource;
@@ -15,7 +14,7 @@ readonly class JwtService
 {
     protected string $guardName;
 
-    public function __construct(private readonly AvatarService $avatarService)
+    public function __construct(private AvatarService $avatarService)
     {
         $this->guardName = 'api';
     }
@@ -25,30 +24,14 @@ readonly class JwtService
         return Auth::guard($this->guardName)->attempt($credentials);
     }
 
-    public function guardApiRefresh(): ?string
-    {
-        return Auth::guard($this->guardName)->refresh();
-    }
-
     public function getUser(): ? Authenticatable
     {
-        return Auth::guard('api')->user();
+        return Auth::guard($this->guardName)->user();
     }
 
     public function userLogout(): void
     {
-        Auth::guard('api')->logout();
-    }
-
-    public function buildResponse(string|null $token, string $message, bool $isRegistration = false): SuccessAuthResource|BaseWithResponseResource
-    {
-        if (!$token) {
-            return new BaseWithResponseResource(null, 'Unauthorized', ResponseAlias::HTTP_UNAUTHORIZED, 'failure');
-        }
-
-        $user = $this->getUser();
-
-        return new SuccessAuthResource($user, $token, $message, $isRegistration);
+        Auth::guard($this->guardName)->logout();
     }
 
     public function buildResponseLogin(string|null $token): BaseWithResponseResource|SuccessLoginResource
@@ -58,6 +41,8 @@ readonly class JwtService
         }
 
         $user = $this->getUser();
+
+
 
         $avatars = $this->avatarService->getUserAvatarUrls($user->id);
 
