# backend/api/src/public/docs/openapi.yaml
@@ -99,27 +99,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerErrorResource'
-  /api/auth/refresh-token:
-    get:
-      tags:
-        - auth
-      summary: 'Refresh user token'
-      operationId: api.auth.refreshToken
-      requestBody:
-        required: false
-      responses:
-        '200':
-          description: 'Token successfully refreshed'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SuccessAuthResource'
-        '500':
-          description: 'Some internal server error occurred'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/InternalServerErrorResource'
   /api/auth/register:
     post:
       tags:
