# backend/api/src/routes/api.php
@@ -3,7 +3,6 @@
 use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\LogoutController;
 use App\Http\Controllers\Auth\ProfileController;
-use App\Http\Controllers\Auth\RefreshTokenController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Profile\UploadUserAvatarController;
 use Illuminate\Http\Request;
@@ -31,7 +30,6 @@ Route::group([
     'middleware' => ['auth:api']
 ], function() {
     Route::get('auth/profile', ProfileController::class)->name('api.auth.profile');
-//    Route::get('auth/refresh-token', RefreshTokenController::class)->name('api.auth.refreshToken');
     Route::get('auth/logout', LogoutController::class)->name('api.auth.logout');
 });
 
